--- a/www/styles.css
+++ b/www/styles.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto+Slab');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Spectral');
 
 body {
-  font-family: 'Roboto Slab', 'Source Sans', sans-serif;
+  font-family: 'Spectral', 'Source Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5, h6 {
